@@ -35,9 +35,9 @@
  *      jdk.compiler/com.sun.tools.javac.util
  *      jdk.jdeps/com.sun.tools.classfile
  * @build JavacTestingAbstractProcessor
- * @compile --enable-preview -source ${jdk.version} RecordCompilationTests.java
- * @run testng/othervm -DuseAP=false --enable-preview RecordCompilationTests
- * @run testng/othervm -DuseAP=true --enable-preview RecordCompilationTests
+ * @compile RecordCompilationTests.java
+ * @run testng/othervm -DuseAP=false RecordCompilationTests
+ * @run testng/othervm -DuseAP=true RecordCompilationTests
  */
 
 import java.io.File;
@@ -119,17 +119,7 @@ import static org.testng.Assert.assertEquals;
 
 @Test
 public class RecordCompilationTests extends CompilationTestCase {
-    // @@@ When records become a permanent feature, we don't need these any more
-    private static String[] PREVIEW_OPTIONS = {
-            "--enable-preview",
-            "-source", Integer.toString(Runtime.version().feature())
-    };
-
-    private static String[] PREVIEW_OPTIONS_WITH_AP = {
-            "--enable-preview",
-            "-source", Integer.toString(Runtime.version().feature()),
-            "-processor", SimplestAP.class.getName()
-    };
+    private static String[] OPTIONS_WITH_AP = {"-processor", SimplestAP.class.getName()};
 
     private static final List<String> BAD_COMPONENT_NAMES = List.of(
             "clone", "finalize", "getClass", "hashCode",
@@ -148,7 +138,9 @@ public class RecordCompilationTests extends CompilationTestCase {
     public RecordCompilationTests() {
         boolean useAP = System.getProperty("useAP") == null ? false : System.getProperty("useAP").equals("true");
         setDefaultFilename("R.java");
-        setCompileOptions(useAP ? PREVIEW_OPTIONS_WITH_AP : PREVIEW_OPTIONS);
+        if (useAP) {
+            setCompileOptions(OPTIONS_WITH_AP);
+        }
         System.out.println(useAP ? "running all tests using an annotation processor" : "running all tests without annotation processor");
     }
 
@@ -483,7 +475,7 @@ public class RecordCompilationTests extends CompilationTestCase {
         assertFail("compiler.err.already.defined", template);
     }
 
-    public void testStaticLocalTypes() {
+    public void testStaticDefinitionsInLocalandInner() {
         // local records can also be final
         assertOK("class R { \n" +
                 "    void m() { \n" +
@@ -776,6 +768,120 @@ public class RecordCompilationTests extends CompilationTestCase {
                 "    }\n" +
                 "}");
 
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    String hello = \"hello\";\n" +
+                "    class Inner {\n" +
+                "        enum E {\n" +
+                "            A;\n" +
+                "            public void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(hello);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    String hello = \"hello\";\n" +
+                "    class Inner {\n" +
+                "        enum E {\n" +
+                "            A;\n" +
+                "            public void test1() {\n" +
+                "                System.err.println(hello);\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    String hello = \"hello\";\n" +
+                "    class Inner {\n" +
+                "        record R() {\n" +
+                "            public void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(hello);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    String hello = \"hello\";\n" +
+                "    class Inner {\n" +
+                "        record R() {\n" +
+                "            public void test1() {\n" +
+                "                System.err.println(hello);\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    String hello = \"hello\";\n" +
+                "    class Inner {\n" +
+                "        interface I {\n" +
+                "            public default void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(hello);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    String hello = \"hello\";\n" +
+                "    class Inner {\n" +
+                "        interface I {\n" +
+                "            public default void test1() {\n" +
+                "                System.err.println(hello);\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    String hello = \"hello\";\n" +
+                "    class Inner {\n" +
+                "        static class SC {\n" +
+                "            public void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(hello);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    String hello = \"hello\";\n" +
+                "    class Inner {\n" +
+                "        static class SC {\n" +
+                "            public void test1() {\n" +
+                "                System.err.println(hello);\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
         // but static fields are OK
         assertOK("class R { \n" +
                 "    static int z = 0;\n" +
@@ -845,6 +951,31 @@ public class RecordCompilationTests extends CompilationTestCase {
                 }
                 """
         );
+
+        // inner classes can contain static methods too
+        assertOK(
+                """
+                class C {
+                    class Inner {
+                        // static method inside inner class
+                        static void m() {}
+                    }
+                }
+                """
+        );
+
+        assertOK(
+                """
+                class C {
+                     void m() {
+                         new Object() {
+                            // static method inside inner class
+                            static void m() {}
+                         };
+                     }
+                }
+                """
+        );
     }
 
     public void testReturnInCanonical_Compact() {
@@ -875,7 +1006,7 @@ public class RecordCompilationTests extends CompilationTestCase {
     }
 
     public void testRecordsInsideInner() {
-        assertFail("compiler.err.static.declaration.not.allowed.in.inner.classes",
+        assertOK(
                 """
                 class Outer {
                     class Inner {
@@ -884,7 +1015,7 @@ public class RecordCompilationTests extends CompilationTestCase {
                 }
                 """
         );
-        assertFail("compiler.err.static.declaration.not.allowed.in.inner.classes",
+        assertOK(
                 """
                 class Outer {
                     public void test() {
@@ -894,7 +1025,7 @@ public class RecordCompilationTests extends CompilationTestCase {
                     }
                 }
                 """);
-        assertFail("compiler.err.static.declaration.not.allowed.in.inner.classes",
+        assertOK(
                 """
                 class Outer {
                     Runnable run = new Runnable() {
@@ -903,7 +1034,7 @@ public class RecordCompilationTests extends CompilationTestCase {
                     };
                 }
                 """);
-        assertFail("compiler.err.static.declaration.not.allowed.in.inner.classes",
+        assertOK(
                 """
                 class Outer {
                     void m() {
@@ -1008,7 +1139,7 @@ public class RecordCompilationTests extends CompilationTestCase {
         String[] previousOptions = getCompileOptions();
         String[] testOptions = {/* no options */};
         setCompileOptions(testOptions);
-        assertOKWithWarning("compiler.warn.restricted.type.not.allowed.preview",
+        assertFail("compiler.err.illegal.start.of.type",
                 "class R {\n" +
                 "    record RR(int i) {\n" +
                 "        return null;\n" +
@@ -1060,8 +1191,6 @@ public class RecordCompilationTests extends CompilationTestCase {
         );
 
         String[] generalOptions = {
-                "--enable-preview",
-                "-source", Integer.toString(Runtime.version().feature()),
                 "-processor", Processor.class.getName(),
                 "-Atargets="
         };
